@@ -2,6 +2,8 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 
 next:
           - support reading action_menu_items from file/folder
+          - Reports:
+            - include any ok event always in availability calculation
 
 2.08     Fri May  6 11:29:14 CEST 2016
           - add status column to performance map excel export
